omni/tests/goldens/types/unknown_type_10.omni
let value10:Mystery10 = 1
